# lumos-rs

./: Cargo.toml  LICENSE  README.md  package.py
.github/workflows/: rust.yml
audio-capture/: Cargo.toml
audio-capture/src/: audio_sink.rs  lib.rs  wave_to_intensity.rs
backend/: Cargo.toml
backend/audio-capture/: Cargo.toml
backend/audio-capture/src/: audio_sink.rs  lib.rs
backend/audio-capture/src/intensity_source/: intensity_gate.rs  mod.rs  wave_to_intensity.rs
backend/audio-capture/src/intensity_source/audio_source/: audio_sink.rs  mod.rs
backend/color/src/: calibration.rs  lib.rs
backend/desktop-capture/: Cargo.toml
backend/desktop-capture/src/: desktop_duplicator.rs  lib.rs
backend/lumos-rs/: Cargo.toml
backend/lumos-rs/src/: main.rs  outputs.rs  websocket.rs
backend/lumos-rs/src/profiles/: mod.rs  window_listener.rs
backend/lumos-rs/src/render_service/: device_collection.rs  mod.rs
backend/lumos-rs/src/render_service/device/: frame_sampler.rs  mod.rs  specification.rs
backend/lumos-rs/src/render_service/device/transformations/: audio.rs
backend/win-rt-rgb/: Cargo.toml
backend/win-rt-rgb/src/: common.rs
backend/win-rt-rgb/src/profiles/: mod.rs  window_listener.rs
backend/win-rt-rgb/src/render_service/: device_collection.rs  mod.rs
backend/win-rt-rgb/src/render_service/device/: mod.rs
color/: Cargo.toml
color/src/: lib.rs
desktop-capture/: Cargo.toml
desktop-capture/src/: lib.rs
electron-app/: .gitignore  babel.config.js  index.html  package-lock.json  package.json  tsconfig.json
electron-app/electron/: main.ts
electron-app/src/: AboutScene.tsx  App.tsx  Sidebar.tsx  WebsocketService.ts
electron-app/src/devices/: DeviceEntry.tsx  DeviceSettings.tsx  DeviceSpecification.ts  DevicesScene.tsx  DevicesService.ts  QmkSettings.tsx  SerialSettings.tsx  Style.css  WledSettings.tsx
electron-app/src/models/: DeviceSpecification.ts  profile.ts
electron-app/src/profiles/: MonitorDialog.tsx  Profile.ts  ProfileCategory.tsx  ProfileEntry.tsx  ProfileSettings.tsx  ProfilesScene.tsx  ProfilesService.ts
electron-app/src/profiles/parsing/: AreaSpecificationParser.ts  Lexer.ts
electron-app/src/styles/: About.css  Global.css
electron-app/webpack/: react.webpack.js
rendering/: Cargo.toml
rendering/src/: lib.rs
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src/: AboutScene.tsx  App.tsx  Sidebar.tsx  WebsocketService.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/src/devices/: DeviceEntry.tsx  DeviceEntryActions.tsx  DeviceSettings.css  DeviceSettings.tsx  DeviceSpecification.ts  DevicesScene.tsx  DevicesService.ts  QmkSettings.tsx  SerialSettings.tsx  WledSettings.tsx
tauri-app/src/profiles/: MonitorDialog.tsx  Profile.ts  ProfileCategory.tsx  ProfileCategoryEntryActions.tsx  ProfileEntry.tsx  ProfileEntryActions.tsx  ProfileSettings.tsx  ProfilesScene.tsx  ProfilesService.ts
tauri-app/src/profiles/parsing/: AreaSpecificationParser.ts  StringReader.ts
tauri-app/src/styles/: Global.css
tauri-app/src/system/: AudioDevicesCard.tsx  AudioDevicesService.tsx  SystemScene.tsx
win-rt-rgb/: Cargo.toml
win-rt-rgb/src/: device_collection.rs  frame_sampler.rs  main.rs  outputs.rs  transformations.rs  websocket.rs
win-rt-rgb/src/device/: frame_sampler.rs  mod.rs  output.rs  specification.rs
win-rt-rgb/src/device/transformations/: audio.rs  color.rs  hsv_adjustment.rs  mod.rs
win-rt-rgb/src/pipeline/: frame_sampler.rs  mod.rs
win-rt-rgb/src/render_service/device/transformations/: color.rs  mod.rs
