[package]
name = "desktop-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color = { path = "../color" }
dxgcap = "0.2.4"
simple-error = "0.2.3"
futures = "0.3"
log = "*"
async-std = { version = "^1.10", features = ["unstable"] }
flume = "0.10.12"
