[package]
name = "win-rt-rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rendering = { path = "../rendering" }
desktop-capture = { path = "../desktop-capture" }
color = { path = "../color" }
log = "*"
simplelog = "^0.11.0"
simple-error = "0.2.3"
futures = "0.3"