[package]
name = "win-rt-rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
desktop-capture = { path = "../desktop-capture" }
audio-capture = { path = "../audio-capture" }
color = { path = "../color" }
log = "*"
simplelog = "^0.11.0"
simple-error = "0.2.3"
futures = "0.3"
hidapi = "1.3.4"
lazy_static = "1.4.0"