[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "*"
simple-error = "0.2.3"
wasapi = "0.15"
byteorder = "1.4.3"
realfft = "3.0.0"
flume = "0.10.12"
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio = { version = "1.17.0", features = ["sync"] }
tokio-util = { version = "0.7.4", features = ["futures-util"]}
