[package]
name = "desktop-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color = { path = "../color" }
dxgcap = "0.2.4"
simple-error = "0.2.3"
futures = "0.3"
log = "*"
tokio = { version = "1.17.0", features = ["sync", "macros", "time"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
