[package]
name = "desktop-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color = { path = "../color" }
simple-error = "0.2.3"
futures = "0.3"
log = "*"
tokio = { version = "1.17.0", features = ["sync", "macros", "time"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
wio = "0.2.2"
tokio-util = { version = "0.7.4", features = ["futures-util"]}

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
]
