[package]
name = "lumos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
desktop-capture = { path = "../desktop-capture" }
audio-capture = { path = "../audio-capture" }
color = { path = "../color" }
log = "*"
simplelog = "0.12.0"
simple-error = "0.2.3"
futures = "0.3"
hidapi = "1.3.4"
lazy_static = "1.4.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-tungstenite = "0.17.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
regex = "1.5.5"
wineventhook = "0.2.1"
serialport = "4.1.0"

[dependencies.windows]
version = "0.35.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
]
